info converter file

--- a/Interpolation.ipynb
+++ b/Interpolation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "id": "a46ec58c-a884-48dc-836d-7880f7793052",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "id": "080460d2-ec25-4cfe-99d8-4a270c4a01ee",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "id": "f8975b9d-7561-4feb-86bc-2dfeb91e7b65",
    "metadata": {},
    "outputs": [],
@@ -69,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "df2b5e1c-ec3d-468b-ab90-7e0db1ab2838",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1747703857421874"
+       "0.030082824707031275"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,22 +89,23 @@
     "points = [(1, 0.6747), (1.2, 0.8491), (1.4, 1.1214), (1.6, 1.4921), (1.8, 1.9607), (2, 2.5258)]\n",
     "result = divided_Diferences(points, predictX)\n",
     "result2 = lagrange(points, predictX)\n",
-    "result2"
+    "result2\n",
+    "result - result2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "id": "20f0d307-1e77-46ee-8030-e95cf7449b5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c3c4404490>]"
+       "[<matplotlib.lines.Line2D at 0x225fe9c8730>]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
